# people_detector_node

./: CMakeLists.txt  README.md  package.xml
launch/: people_detector.launch
people_detector_node/: CMakeLists.txt
people_detector_node/launch/: logger.launch
people_detector_node/src/: people_detector_node.cpp
src/: logger.cpp  test_scan.cpp
